added run names; dealt with windows path format

--- a/QC/Makefile
+++ b/QC/Makefile
@@ -6,16 +6,25 @@ include $(INPUT_FILE)
 export $(shell grep -v '^\#' $(INPUT_FILE) | cut -d= -f1)
 
 SCRIPT_PATH=scripts
-RESULT_PATH=results
+RESULT_BASE_PATH=results
+# trim white spaces around 
+RESULT_PATH=$(RESULT_BASE_PATH)/$(shell echo $(QC_NAME) | xargs)
+RESULT_TEST_PATH=$(RESULT_BASE_PATH)/test
 RTABLE_SCRIPT_FILES=$(wildcard $(SCRIPT_PATH)/qc_rtable_*.R)
-RTABLE_SCRIPTOUT_FILES=$(patsubst $(SCRIPT_PATH)/qc_rtable_*.R, $(SCRIPT_PATH)/qc_rtable_%.Rout, $(RTABLE_SCRIPT_FILES))
-RTABLE_RESULT_FILES=$(patsubst $(SCRIPT_PATH)/qc_rtable_%.R, $(RESULT_PATH)/qc_rtable_%.txt, $(RTABLE_SCRIPT_FILES))
-export QC_SCRIPT_PATH=$(shell pwd)/$(SCRIPT_PATH)
-export QC_RESULT_PATH=$(shell pwd)/$(RESULT_PATH)
+RTABLE_SCRIPTOUT_FILES=$(patsubst $(SCRIPT_PATH)/qc_rtable_*.R, $(SCRIPT_PATH)/qc_rtable_%.Rout, \
+				$(RTABLE_SCRIPT_FILES))
+RTABLE_RESULT_FILES=$(patsubst $(SCRIPT_PATH)/qc_rtable_%.R, $(RESULT_PATH)/qc_rtable_%.txt, \
+				$(RTABLE_SCRIPT_FILES))
+
+# The following converts POSIX into Windows path, 
+# which is needed when other processes (e.g. R) use it.  
+WRKDIR=$(shell pwd  | sed 's|^/\([a-z]\)/|\1:/|')
+export QC_SCRIPT_PATH=$(WRKDIR)/$(SCRIPT_PATH)
+export QC_RESULT_PATH=$(WRKDIR)/$(RESULT_PATH)
 
 
 .PHONY : test
-test : $(RESULT_PATH)/testreport.txt
+test : $(RESULT_TEST_PATH)/testreport.txt
 
 .PHONY : ind
 ind : 
@@ -40,8 +49,13 @@ rplots : rplots.png
 clean : 
 	rm -f $(SCRIPT_PATH)/*.Rout
 	rm -f $(RESULT_PATH)/*.txt
+	rm -fr $(RESULT_TEST_PATH)
 
-$(RESULT_PATH)/testreport.txt : $(SCRIPT_PATH)/create_testreport.R
+# Lines in the following recipe needs to be connected via ; and \ in order 
+# for the R process to see the change in the env variable.
+# Otherwise it would be one sub-process per line.
+$(RESULT_TEST_PATH)/testreport.txt : $(SCRIPT_PATH)/create_testreport.R
+	export QC_RESULT_PATH=$(WRKDIR)/$(RESULT_TEST_PATH); \
 	R CMD BATCH $(SCRIPT_PATH)/create_testreport.R $(SCRIPT_PATH)/create_testreport.Rout
 
 map.png : create_map.py
