--- a/QC/Makefile
+++ b/QC/Makefile
@@ -7,6 +7,7 @@ export $(shell grep -v '^\#' $(INPUT_FILE) | cut -d= -f1)
 
 SCRIPT_PATH=scripts
 RESULT_BASE_PATH=results
+RREPORT_PATH=../Rreports
 # trim white spaces around 
 RESULT_PATH=$(RESULT_BASE_PATH)/$(shell echo $(QC_NAME) | xargs)
 RESULT_TEST_PATH=$(RESULT_BASE_PATH)/test
@@ -33,6 +34,10 @@ test : $(RESULT_TEST_PATH)/testreport.txt
 ind : 
 	python $(SCRIPT_PATH)/create_indicator_files.py
 
+.PHONY : ind-an
+ind-an :
+	python $(SCRIPT_PATH)/create_annual_indicator_files.py
+
 .PHONY : all
 all: rtables_raw rplots_raw index
 
@@ -48,6 +53,13 @@ rplots : rplots_raw index
 .PHONY : rplots_raw
 rplots_raw : $(RPLOT_SCRIPTOUT_FILES)
 
+.PHONY : rreport-faz
+rreport-faz : $(RREPORT_PATH)/fazreportLUV.Rout
+
+.PHONY : rreport-city
+rreport-city : $(RREPORT_PATH)/cityreportLUV.Rout
+
+
 index : $(SCRIPT_PATH)/create_index_file.R inputs.txt
 	R CMD BATCH $(SCRIPT_PATH)/create_index_file.R  $(SCRIPT_PATH)/create_index_file.Rout
 
@@ -57,10 +69,12 @@ $(SCRIPT_PATH)/qc_rtable_%.Rout : $(SCRIPT_PATH)/qc_rtable_%.R inputs.txt
 $(SCRIPT_PATH)/rplots_%.Rout : $(SCRIPT_PATH)/rplots_%.R inputs.txt
 	R CMD BATCH $(SCRIPT_PATH)/rplots_$*.R  $(SCRIPT_PATH)/rplots_$*.Rout
 
+$(RREPORT_PATH)/fazreportLUV.Rout : $(RREPORT_PATH)/fazreportLUV.R inputs.txt
+	R CMD BATCH $(RREPORT_PATH)/fazreportLUV.R $(RREPORT_PATH)/fazreportLUV.Rout
 
-# placeholder
-.PHONY : maps
-maps : map.png
+$(RREPORT_PATH)/cityreportLUV.Rout : $(RREPORT_PATH)/cityreportLUV.R inputs.txt
+	R CMD BATCH $(RREPORT_PATH)/cityreportLUV.R $(RREPORT_PATH)/cityreportLUV.Rout
+
 
 .PHONY : clean
 clean : 
@@ -75,7 +89,10 @@ $(RESULT_TEST_PATH)/testreport.txt : $(SCRIPT_PATH)/create_testreport.R
 	export QC_RESULT_PATH=$(WRKDIR)/$(RESULT_TEST_PATH); \
 	R CMD BATCH $(SCRIPT_PATH)/create_testreport.R $(SCRIPT_PATH)/create_testreport.Rout
 
-# placeholder
+# placeholder (not implemented)
+.PHONY : maps
+maps : map.png
+
 map.png : create_map.py
 	python create_map.py
 
