added empscatter to Makefile and a few fixes

--- a/QC/Makefile
+++ b/QC/Makefile
@@ -53,6 +53,12 @@ rplots : rplots_raw index
 .PHONY : rplots_raw
 rplots_raw : $(RPLOT_SCRIPTOUT_FILES)
 
+.PHONY : empplots
+empplots : $(RESULT_PATH)/qc_scatterplot_emp_cnty.html
+
+$(RESULT_PATH)/qc_scatterplot_emp_cnty.html : $(SCRIPT_PATH)/qc_scatterplot_emp_cnty.py inputs.txt
+	python $(SCRIPT_PATH)/qc_scatterplot_emp_cnty.py
+
 .PHONY : rreport-faz
 rreport-faz : $(RREPORT_PATH)/fazreportLUV.Rout
 
