scatterplot of max dev capacity

--- a/QC/Makefile
+++ b/QC/Makefile
@@ -36,6 +36,7 @@ test : $(RESULT_TEST_PATH)/testreport.txt
 .PHONY : ind
 ind : 
 	python $(SCRIPT_PATH)/create_indicator_files.py
+	python $(SCRIPT_PATH)/create_max_dev_indicator_files.py
 
 .PHONY : ind-an
 ind-an :
