--- a/QC/Makefile
+++ b/QC/Makefile
@@ -36,6 +36,7 @@ test : $(RESULT_TEST_PATH)/testreport.txt
 .PHONY : ind
 ind : 
 	python $(SCRIPT_PATH)/create_indicator_files.py
+	python $(SCRIPT_PATH)/create_indicator_files_nearyr_outyr.py
 	
 .PHONY : ind-maxdev
 ind-maxdev :
